crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__inspection_screen_120x40.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
expression: contents
---
quickbridge v0.2.0                                                                                                      
                                                                                                                        
                                                                                                                        
Source                                                                                                                  
https://example.com/video.mkv                                                                                           
                                                                                                                        
Activity                                                                                                                
✓ Checked source URL                                                                                                    
⠋ Checking whether time jumps are available                                                                             
○ Read source details                                                                                                   
○ Found video and audio tracks                                                                                          
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
╭ Input ───────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Inspecting source…                                                                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Ctrl+C cancel
