crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__launcher_help_80x24.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
expression: help
---
quickbridge v0.2.0                                                              
                                                                                
                                                                                
Source                                                                          
Enter a direct media URL below                                                  
                                                                                
╭ Session ─────────────────────────────────────────────────────────────────────╮
│Open media in QuickTime Player                                                │
│Enter a direct http:// or https:// media URL below.                           │
│               ╭ Help ─────────────────────────────────────────╮              │
╰───────────────│Enter a direct http:// or https:// media URL.  │──────────────╯
                │Enter  Inspect source                          │               
                │Ctrl+C  Quit                                   │               
                │Esc or F1  Close                               │               
                ╰───────────────────────────────────────────────╯               
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
╭ Input ───────────────────────────────────────────────────────────────────────╮
│> ▏https://example.com/movie.mkv                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
Enter inspect source  •  F1 help  •  Ctrl+C quit
