crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__running_screen_120x40.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
assertion_line: 716
expression: contents
---
quickbridge 0.1.0                                                                                                       
                                                                                                                        
Inspect source                                                                                                          
✓ Checked source URL                                                                                                    
✓ Time jumps are available                                                                                              
✓ Read source details                                                                                                   
✓ Found video and audio tracks                                                                                          
                                                                                                                        
Start session                                                                                                           
✓ Started local stream server                                                                                           
✓ Started ffmpeg relay                                                                                                  
✓ Opened QuickTime Player                                                                                               
                                                                                                                        
· Type a timecode like `01:30`, use `+10` or `-10` to jump, or `help` for commands.                                     
! [WARN] No ranges                                                                                                      
> status                                                                                                                
                                                                                                                        
Live session                                                                                                            
00:00:12 / 00:02:00  •  3.0 MB/s  •  buffer 00:00:06  •  storage 12.0 MB                                                
                                                                                                                        
○ Preparing the next stream                                                                                             
○ Waiting for the stream                                                                                                
⠋ Refreshing QuickTime Player                                                                                           
○ Cleaning up the last session                                                                                          
                                                                                                                        
Input                                                                                                                   
                                                                                                                        
> status                                                                                                                
