crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__running_screen_131x36.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
expression: "render_contents_with_size(&state, 131, 36)"
---
quickbridge v0.2.0                                                                                                                 
                                                                                                                                   
                                                                                                                                   
Source                                                                                                                             
https://example.com/video.mkv                                                                                                      
                                                                                                                                   
Activity                                                                                                                           
✓ Checked source URL                                                                                                               
✓ Time jumps are available                                                                                                         
✓ Read source details                                                                                                              
✓ Found video and audio tracks                                                                                                     
✓ Started local stream server                                                                                                      
✓ Started ffmpeg relay                                                                                                             
✓ Opened QuickTime Player                                                                                                          
! [WARN] No ranges                                                                                                                 
> status                                                                                                                           
○ Preparing the next stream                                                                                                        
○ Waiting for the stream                                                                                                           
⠋ Refreshing QuickTime Player                                                                                                      
○ Cleaning up the last session                                                                                                     
                                                                                                                                   
                                                                                                                                   
                                                                                                                                   
                                                                                                                                   
Tracks                                                                                                                             
Video  H.264 • Unknown resolution • SDR • default                                                                                  
Audio  No audio                                                                                                                    
                                                                                                                                   
                                                                                                                                   
Player                                                                                                                             
00:00:12 / 00:02:00                                                                                                                
Buffer 00:00:06    Relay 3.0 MB/s    Storage 12.0 MB                                                                               
╭ Input ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│> status▏                                                                                                                        │
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Enter run  •  PgUp/PgDn activity  •  Esc clear/close  •  Ctrl+C quit
