crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__running_screen_closed_60x18.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
assertion_line: 1159
expression: compact
---
quickbridge 0.1.0                                           
● Ready • Live session                                      
Playback health                                             
Player  ! Window closed                                     
Time    00:00:12 / 00:02:00                                 
Buffer  00:00:06                                            
Relay   3.0 MB/s                                            
Storage 12.0 MB                                             
Attention                                                   
[WARN] QuickTime Player window is closed. Type `reopen` to  
open the stream again.                                      
Recent activity                                             
· Type a timecode like `01:30`, use `+10` or `-10` to jump, 
Command                                                     
                                                            
> reopen                                                    
                                                            
PgUp/PgDn activity • Enter run • Ctrl+C exit
