crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__running_screen_closed_80x24.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
expression: contents
---
quickbridge v0.1.0                                                              
                                                                                
                                                                                
Source                                                                          
https://example.com/video.mkv                                                   
                                                                                
✓ Found video and audio tracks                                                  
✓ Started local stream server                                                   
✓ Started ffmpeg relay                                                          
✓ Opened QuickTime Player                                                       
[WARN] QuickTime Player window is closed — type `reopen`.                       
                                                                                
Tracks                                                                          
Video  H.264 • Unknown resolution • SDR • default                               
Audio  No audio                                                                 
                                                                                
                                                                                
Player                                                                          
00:00:12 / 00:02:00                                                             
Buffer 00:00:06    Relay 3.0 MB/s    Storage 12.0 MB                            
╭ Input ───────────────────────────────────────────────────────────────────────╮
│> reopen▏                                                                     │
╰──────────────────────────────────────────────────────────────────────────────╯
Enter run  •  PgUp/PgDn activity  •  Esc clear/close  •  Ctrl+C quit
