crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__source_error_screen_60x18.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
expression: contents
---
quickbridge v0.2.0                                          
                                                            
                                                            
Source                                                      
https://example.com/broken.mkv                              
                                                            
╭ Couldn't open this source ───────────────────────────────╮
│! ffprobe couldn't inspect this source.                   │
│unable to inspect the source with ffprobe: denied         │
╰──────────────────────────────────────────────────────────╯
                                                            
                                                            
                                                            
                                                            
╭ Input ───────────────────────────────────────────────────╮
│R try again  •  E edit URL  •  Q quit                     │
╰──────────────────────────────────────────────────────────╯
R try again  •  E edit URL  •  Q quit
