crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__source_error_screen_80x24.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
assertion_line: 908
expression: contents
---
quickbridge 0.1.0                                                               
                                                                                
Couldn't prepare source                                                         
! ffprobe couldn't inspect this source.                                         
                                                                                
Source                                                                          
https://example.com/broken.mkv                                                  
                                                                                
Choose an action                                                                
R Retry • E Edit URL • Q Quit                                                   
                                                                                
Details                                                                         
unable to inspect the source with ffprobe: denied
