crates/quickbridge-ui/src/render/snapshots/quickbridge_ui__render__tests__startup_screen_120x40.snap
---
source: crates/quickbridge-ui/src/render/mod.rs
expression: contents
---
quickbridge v0.2.0                                                                                                      
                                                                                                                        
                                                                                                                        
Source                                                                                                                  
https://example.com/video.mkv                                                                                           
                                                                                                                        
Activity                                                                                                                
✓ Checked source URL                                                                                                    
✓ Time jumps are available                                                                                              
✓ Started local stream server                                                                                           
⠋ Starting ffmpeg relay                                                                                                 
○ QuickTime Player                                                                                                      
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Tracks                                                                                                                  
HEVC • 3840×2160 • HDR10                                                                                                
English • E-AC-3 • 5.1                                                                                                  
                                                                                                                        
╭ Input ───────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Starting QuickTime Player…                                                                                            │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Ctrl+C cancel
